# LowProfilePerformanceProfile

./: .gitignore  README.md  __main__.py  build.py  l3p.spec  profile.py  pyproject.toml  requirements.txt  tray.py  version.py
src/: __init__.py  __main__.py  app.py  metrics.py  profile_window.py  tray.py  tray_qt.py  version.py
