[project]
name = "l3p"
version = "2.0.0"
description = "L3P - Low-Profile Performance Profile: A lightweight cross-platform system monitor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "L3P Contributors" }
]
keywords = ["system-monitor", "tray-icon", "performance", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "dearpygui>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]
# Linux-specific: for AppIndicator tray support on GNOME/Unity
linux = [
    "pygobject>=3.42.0",
]

[project.scripts]
l3p = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/example/l3p"
Repository = "https://github.com/example/l3p"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]
